--- a/Lab01/index.html
+++ b/Lab01/index.html
@@ -8,10 +8,9 @@
 </head>
 <body>
     <h1>Gabriel Matos Lourenço</h1>
-
     <div>
-        <p>Bem-vindo à minha página inicial!</p>
-
+        <p>Bem-vindo ao meu Portifólio!</p>
+        
         <p>Link para contatos: <a href="./contato.html">Contatos</a></p>
     </div>
     
@@ -34,6 +33,7 @@
     </ul>
 
     <h3>Iframes</h3>
+    <div class="iframe-container">
     <iframe width="400" height="315" src="https://www.youtube.com/embed/SXfqkEJ-HCw?si=-tfxgS97mpUanRZj" 
     title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; 
     gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
@@ -44,6 +44,9 @@
 
     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3652.648556354263!2d-46.5793979!3d-23.724241199999984!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce4158ef9c7c05%3A0x776b798985695f52!2sFEI%20-%20Campus%20S%C3%A3o%20Bernardo%20do%20Campo!5e0!3m2!1spt-BR!2sbr!4v1755788421424!5m2!1spt-BR!2sbr" 
     width="400" height="315" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+
+    </div>
+
 </body>
 
 </html>
