Correcao de caminho da pag de contatos

--- a/Lab01/index.html
+++ b/Lab01/index.html
@@ -11,7 +11,7 @@
     <div>
         <p>Bem-vindo ao meu Portifólio!</p>
         
-        <p>Link para contatos: <a href="./contato.html">Contatos</a></p>
+        <p>Link para contatos: <a href="./contatos.html">Contatos</a></p>
     </div>
     
 
