Adicionando css inicial das páginas index e projects

--- a/Lab02/index.html
+++ b/Lab02/index.html
@@ -4,28 +4,42 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meu Portifólio FEI</title>
-    <link rel="stylesheet" href="./styles/styles_index.css">
+    <link rel="stylesheet" href="./styles/index.css">
 </head>
 <body>
-    <div class="navegacao">
+    <div class="navigation">
         <ul class="menu">
-            <li><a href="#">Página inicial</a></li>
-            <li><a href="#about">Sobre</a></li>
-            <li><a href="./projects.html">Contato</a></li>
+            <li><a href="./index.html">Página inicial</a></li>
+            <li><a href="./projects.html">Projetos</a></li>
         </ul>
     </div>
+
     
-    <h1>Gabriel Matos Loureço</h1>
+    <div id="content-header">
+        <h1>Gabriel Matos Loureço</h1>
 
-    <p>Bem-vindo ao meu Portifólio</p>
-
-
-
-    <div id="about">
-        <h2>Sobre mim</h2>
-        <p>Desenvolvedor de Software focado em Backend.</p>
-        <p>Estou sempre aprendendo e buscando melhorar minhas habilidades.</p>
-        <p>Cursando Ciência da Computação - FEI.</p>
+        <p>Bem-vindo ao meu Portifólio</p>
     </div>
+
+    <div class="content-about"> 
+         <div id="about">
+            <h2>Sobre mim</h2>
+            <p>Desenvolvedor de Software focado em Backend.</p>
+            <p>Estou sempre aprendendo e buscando melhorar minhas habilidades.</p>
+            <p>Cursando Ciência da Computação - FEI.</p>
+        </div>
+    </div>
+
+    <div class="content-contacts">
+        <div class="contacts">
+            <h2>Contatos</h2>
+        <ul>
+            <li><a href="mailto:gabriel@example.com">gabriel@example.com</a></li>
+            <li><a href="https://www.linkedin.com/in/gabriel-matos-loureco/">LinkedIn</a></li>
+            <li><a href="https://github.com/gabriel-matos-loureco">GitHub</a></li>
+        </ul>
+        </div>
+    </div>
+   
 </body>
 </html>
