adicionando estilização css

--- a/Lab02/index.html
+++ b/Lab02/index.html
@@ -15,31 +15,35 @@
     </div>
 
     
-    <div id="content-header">
-        <h1>Gabriel Matos Loureço</h1>
 
-        <p>Bem-vindo ao meu Portifólio</p>
+    <div id="content_header">
+        <div>
+            <h1>Gabriel Matos Lourenço</h1>
+            <p>Bem-vindo ao meu Portifólio.</p>
+        </div>
+
+        <div class="content_img">
+            <img src="./imgs/minha_picture.jpeg" alt="selfie retirada, sentado num sofa cinza escuro.">
+        </div>
     </div>
 
-    <div class="content-about"> 
+    <div class="content_about_contacts"> 
          <div id="about">
             <h2>Sobre mim</h2>
             <p>Desenvolvedor de Software focado em Backend.</p>
             <p>Estou sempre aprendendo e buscando melhorar minhas habilidades.</p>
             <p>Cursando Ciência da Computação - FEI.</p>
         </div>
-    </div>
 
-    <div class="content-contacts">
-        <div class="contacts">
-            <h2>Contatos</h2>
+        <div id="contacts">
+        <h2>Contatos</h2>    
         <ul>
-            <li><a href="mailto:gabriel@example.com">gabriel@example.com</a></li>
+            <li><a href="mailto:gabriel@example.com">Email</a></li>
             <li><a href="https://www.linkedin.com/in/gabriel-matos-loureco/">LinkedIn</a></li>
-            <li><a href="https://github.com/gabriel-matos-loureco">GitHub</a></li>
+            <li><a href="https://github.com/GabrielMatoss">GitHub</a></li>
         </ul>
         </div>
     </div>
-   
+
 </body>
 </html>
