--- a/Lab02/projects.html
+++ b/Lab02/projects.html
@@ -14,11 +14,29 @@
         </ul>
     </div>
 
-    <h1>Meus Projetos</h1>
-    <ul>
-        <li><a href="">Projeto 1</a></li>
-        <li><a href="">Projeto 2</a></li>
-        <li><a href="">Projeto 3</a></li>
-    </ul>
+    
+    <div class="container_projects">
+        <h1>Meus Projetos</h1>
+        <table>
+
+            <thead>
+                <tr>
+                    <th>Aulas</th>
+                    <th>Projetos</th>
+                </tr>
+            </thead>
+
+            <tbody>
+                <tr>
+                    <td>Aula 01</td>
+                    <td class="second_row"><a href="../Lab01/index.html" target="_blank">Página Inicial</a></td>
+                </tr>
+                <tr>
+                    <td>Aula 02</td>
+                    <td class="second_row"><a href="../Lab02/index.html" target="_blank">Esqueleto do Site</a></td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
 </body>
 </html>
