mudando tamanho de fonte

--- a/Lab02/index.html
+++ b/Lab02/index.html
@@ -28,7 +28,7 @@
     </div>
 
     <div class="content_about_contacts"> 
-         <div id="about">
+         <div>
             <h2>Sobre mim</h2>
             <p>Desenvolvedor de Software focado em Backend.</p>
             <p>Estou sempre aprendendo e buscando melhorar minhas habilidades.</p>
