--- a/Copy_Lab03/index.html
+++ b/Copy_Lab03/index.html
@@ -9,48 +9,54 @@
 <body>
     <div id="container_title_logo">
         <div id="title_logo">
-            <img width="200px" src="./imgs/c++.png" alt="imagem do logo do c++">
+            <img class="imgCplus"  src="./imgs/c++.png" alt="imagem do logo do c++">
             <h1>C++ e Java</h1>
-            <img width="200px" src="./imgs/java.png" alt="imagem do logo do java">
+            <img class="imgJava" src="./imgs/java.png" alt="imagem do logo do java">
         </div>
-
-        <!-- podemos tirar isso daqui -->
     </div>
+
     <div class="container_links">
-            <a href="">Home</a>
-            <a href="">Livros</a>
-            <a href="">Vídeos</a>
-            <a href="">Contatos</a>
+         <a href="">Home</a>
+         <a href="">Livros</a>
+         <a href="">Vídeos</a>
+         <a href="">Contatos</a>
     </div>
 
+    <div class="container_intro">
+        <h2>Introdução</h2>
 
-    <h2>Introdução</h2>
-
-    <p>C++ (em português: lê-se "cê mais mais", em inglês lê-se see plus plus) é uma linguagem de programação compilada multi-paradigma (seu suporte inclui linguagem imperativa, orientada a objetos e genérica) e de uso geral. Desde os anos 1990 é uma das linguagens comerciais mais populares,
+        <p>C++ (em português: lê-se "cê mais mais", em inglês lê-se see plus plus) é uma linguagem de programação compilada multi-paradigma (seu suporte inclui linguagem imperativa, orientada a objetos e genérica) e de uso geral. Desde os anos 1990 é uma das linguagens comerciais mais populares,
         sendo bastante usada também na academia por seu grande desempenho e base de utilizadores.</p>
 
-    <p>Java é uma linguagem de programação orientada a objetos desenvolvida na década de 90 por uma equipe de programadores chefiada por James Gosling,
+        <p>Java é uma linguagem de programação orientada a objetos desenvolvida na década de 90 por uma equipe de programadores chefiada por James Gosling,
         na empresa Sun Microsystems. Em 2008 o Java foi adquirido pela empresa Oracle Corporation.</p>
 
-    <p>Java foi desenvolvida por um grupo de pesquisadores da SUN Microsystems por volta de 1990, pouco antes da explosão da Internet. Essa linguagem possui estrutura muito semelhante à da linguagem C, da qual descende imediatamente.
+        <p>Java foi desenvolvida por um grupo de pesquisadores da SUN Microsystems por volta de 1990, pouco antes da explosão da Internet. Essa linguagem possui estrutura muito semelhante à da linguagem C, da qual descende imediatamente.
         Java tem em comum com a linguagem C++ o fato de ser orientada a objetos e mantém com esta uma alto grau de semelhança.</p>
+    </div>
+    
 
-    <h2>Livros</h2>
+    <div class="container_books">
+        <h2>Livros</h2>
 
-    <img src="./imgs/book1.jpg" width="200px" alt="">
-    <img src="./imgs/book2.jpg" width="200px" alt="">
-    <img src="./imgs/book3.jpg" width="200px" alt="">
+        <img src="./imgs/book1.jpg" width="200px" alt="">
+        <img src="./imgs/book2.jpg" width="200px" alt="">
+        <img src="./imgs/book3.jpg" width="200px" alt="">
+    </div>
 
-    <h2>Aprenda a programar com Java e C++ na FEI.</h2>
+    <div class="container_iframes">
+        <h2>Aprenda a programar com Java e C++ na FEI.</h2>
 
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/4MHAOPxcnsQ?si=kWZZYBuQB08f-pYV"
-    title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-    referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/4MHAOPxcnsQ?si=kWZZYBuQB08f-pYV"
+        title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+        referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3652.6486945444326!2d-46.581972825320214!3d-23.724236267594957!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce4158ef9c7c05%3A0x776b798985695f52!2sFEI%20-%20Campus%20S%C3%A3o%20Bernardo%20do%20Campo!5e0!3m2!1spt-BR!2sbr!4v1756949749137!5m2!1spt-BR!2sbr" 
-    width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3652.6486945444326!2d-46.581972825320214!3d-23.724236267594957!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce4158ef9c7c05%3A0x776b798985695f52!2sFEI%20-%20Campus%20S%C3%A3o%20Bernardo%20do%20Campo!5e0!3m2!1spt-BR!2sbr!4v1756949749137!5m2!1spt-BR!2sbr" 
+        width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    </div>
 
-    <h2>Contatos</h2>
+   <div class="container_contacts">
+     <h2>Contatos</h2>
 
     <table>
         <tr>
@@ -66,6 +72,9 @@
             <td>isaacjesus@fei.edu.br</td>
         </tr>
     </table>
+   </div>
+
+   
 
     <div id="links_utils">
         <p>Sites para consulta: </p>
