Adicionando css final

--- a/Copy_Lab03/index.html
+++ b/Copy_Lab03/index.html
@@ -57,8 +57,8 @@
 
    <div class="container_contacts">
      <h2>Contatos</h2>
-
-    <table>
+    
+        <table>
         <tr>
             <th>Nome</th>
             <th>Email</th>
@@ -82,15 +82,14 @@
         <ul>
             <li> HTML -  <a href="">https://www.w3schools.com/html/</a></li>
             <li> CSS -  <a href="">https://www.w3schools.com/css/</a></li>
-            <li> JS -  <a href="">https://www.w3schools.com/js/</a></li>
+            <li> JavaScript -  <a href="">https://www.w3schools.com/js/</a></li>
         </ul>
     </div>
 
-    <div id="footer">
-        <img width="200px" src="./imgs/html.png" alt="logo html">
+    <div id="container_footer">
+        <img src="./imgs/html.png" alt="logo html">
         <p>Desejamos um excelente semestre a todos.</p>
-        <p>(Fonte Usada: Comic Sans MS, tamanho 15pt)</p>
-        <img width="200px" src="./imgs/css.png" alt="logo css">
+        <img id="logo_css" src="./imgs/css.png" alt="logo css">
     </div>
 </body>
 </html>
