Add Copy Lab na tabela

--- a/Lab02/projects.html
+++ b/Lab02/projects.html
@@ -34,6 +34,11 @@
                     <td>Aula 02</td>
                     <td class="second_row"><a href="../Lab02/index.html" target="_blank">Esqueleto do Site</a></td>
                 </tr>
+
+                 <tr>
+                    <td>Aula 03</td>
+                    <td class="second_row"><a href="../Copy_Lab03/index.html" target="_blank">Copy Lab</a></td>
+                </tr>
             </tbody>
         </table>
     </div>
