--- a/Extra_JS/index.html
+++ b/Extra_JS/index.html
@@ -6,6 +6,11 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="./script.js" type="text/javascript"></script>
+    <!-- <script src="./script.js" type="text/javascript"></script> -->
+    <!-- <script src="./script2.js" type="text/javascript"></script> -->
+    <script src="./script3.js" type="text/javascript"></script>
+    <script src="./script4.js" type="text/javascript"></script>
+    <script src="./script5.js" type="text/javascript"></script>
+    <!-- <script src="./script6.js" type="text/javascript"></script> -->
 </body>
 </html>
