--- a/Lab02/projects.html
+++ b/Lab02/projects.html
@@ -39,9 +39,13 @@
                     <td>Aula 03</td>
                     <td class="second_row"><a href="../Copy_Lab03/index.html" target="_blank">Copy Lab</a></td>
                 </tr>
-                                 <tr>
+                <tr>
                     <td>Aula 04</td>
                     <td class="second_row"><a href="../Lab04/guess.html" target="_blank">Adivinhação</a></td>
+                </tr>
+                <tr>
+                    <td>Aula 05</td>
+                    <td class="second_row"><a href="../Lab05/canvas.html" target="_blank">Canvas</a></td>
                 </tr>
             </tbody>
         </table>
